Minor fixes; including TogglePanel icon vertical align and modern veil

--- a/client/console/src/main/resources/META-INF/resources/css/syncopeConsole.css
+++ b/client/console/src/main/resources/META-INF/resources/css/syncopeConsole.css
@@ -1137,6 +1137,10 @@ ul.menu li a {
   cursor: pointer !important;
 }
 
+ul.menu i {
+  width: 35px;
+}
+
 .toggle-menu ul.menu li a {
   padding: 0px;
   text-align: left;
